--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "url": "https://github.com/ibrahimkaya1989/example.newman/issues"
   },
   "homepage": "https://github.com/ibrahimkaya1989/example.newman#readme",
-  "dependencies": {
+  "devDependencies": {
     "newman": "^6.2.1",
     "newman-reporter-htmlextra": "^1.23.1",
     "newman-reporter-json": "^1.0.0"
+  },
+  "engines": {
+    "node": ">=16.0.0",
+    "newman": ">=6.0.0"
   }
 }
